--- a/conf/notify.yaml
+++ b/conf/notify.yaml
@@ -7,7 +7,7 @@
 
 email:
   # default can take values 'smtp', 'sparkPost' or 'mandrill'
-  default: "smtp"
+  default: null
   providers:
     hasura:
       authToken:
@@ -20,12 +20,13 @@ email:
           key: notify.mandrill.key
           name: hasura-secrets
     smtp:
-      hostname: "smtp.gmail.com"
+      hostname: ""
       password:
         secretKeyRef:
           key: notify.smtp.password
           name: hasura-secrets
-      port: 587      username:
+      port: 465
+      username:
         secretKeyRef:
           key: notify.smtp.username
           name: hasura-secrets
@@ -36,7 +37,8 @@ email:
           name: hasura-secrets
 sms:
   # default can take values 'msg91' or 'twilio'
-  default: null  providers:
+  default: null
+  providers:
     hasura:
       authToken:
         secretKeyRef:
